# kubecase

./: .gitignore  README.md  commands.txt  deploy.yaml  deploy2.yaml  generate_pdb_report.py  generate_probe_report.py  generate_resource_report.py  main.py  mcd.yaml  pyproject.toml  requirements.txt  rq.yaml  sts2.yaml
kubecase/: __init__.py  base_report.py  generate_pdb_report.py  generate_probe_report.py  generate_resource_report.py  main.py  utils.py
