[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubecase"
version = "0.1.0"
description = "KubeCase - Live Kubernetes Troubleshooting Reports and Cluster Health Analysis"
authors = [
  { name="Reynaldo Linares" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "typer[all]",
  "fpdf2",
  "pandas",
  "matplotlib"
]

[project.scripts]
kubecase = "kubecase.main:app"

[tool.setuptools]
packages = ["kubecase"]

[tool.setuptools.package-data]
kubecase = ["fonts/*.ttf", "assets/*.png"]